# HAI

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  DESIGN.md  README.md  pyproject.toml
config/: action_mapping.yaml  default.yaml  llm_system_prompt.txt
docs/: base_layer_vendor.md  brand_asset_prompts.jsonl  frontend_agent_brief.md  research_summary.md
evaluation/: README.md  __init__.py  common.py
evaluation/adapters/: prepare_official_benchmark_data.py
evaluation/configs/: eval_mvp.yaml
evaluation/datasets/: action_gold.jsonl  character_eval_subset.jsonl  persona_profiles.json  scenarios.jsonl
evaluation/reports/: build_benchmark_report.py  summarize_incharacter_small_experiments.py
evaluation/runners/: run_action_eval.py  run_character_eval_subset.py  run_charactereval_charrm.py  run_counterfactual.py  run_incharacter_bfi_adapted.py  run_incharacter_bfi_personas.py  run_incharacter_bfi_self_report.py  run_incharacter_questionnaire_personas.py  run_official_character_eval.py
evaluation/scorers/: action_metrics.py  dialogue_metrics.py  incharacter_bfi_scoring.py  incharacter_metrics.py  incharacter_questionnaire_scoring.py
scripts/: download_charrm.py  run_experiment.py  run_gradio.py  run_mock.py  run_prometheus_smoke.py  run_real_api_prometheus.py  test_avatar_connection.py
src/hai_avatar/: __init__.py  app.py  config.py  exceptions.py  logging_config.py  main.py  (+1 more)
tests/: conftest.py  test_action_planner.py  test_bridge_server.py  test_gradio_html.py  test_mock_providers.py  test_personalization.py  test_pipeline.py  test_schemas.py
(+66 files in other folders)
