[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hai-chat-avatar"
version = "0.3.0"
description = "Mock-first AI chat avatar pipeline for Human-AI Interaction coursework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ui = ["gradio>=4.0"]
edge-tts = ["edge-tts>=7.0"]
llm = ["openai>=1.0"]
dev = ["pytest>=8.0"]
benchmark = [
    "huggingface_hub>=0.20",
    "transformers==4.36.2",
    "torch>=2.0.1",
    "sentencepiece>=0.1.99",
    "accelerate>=0.21",
    "matplotlib>=3.8",
    "pandas>=2.0",
]
all = ["gradio>=4.0", "edge-tts>=7.0", "openai>=1.0", "pytest>=8.0"]

[project.scripts]
hai-avatar-mock = "hai_avatar.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hai_avatar.ui" = ["*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"
